# nat_intell_test_task

./: Makefile  README.md  docker-compose.yml
microservice1/: Dockerfile  Makefile  alembic.ini  pyproject.toml
microservice1/alembic/: env.py
microservice1/alembic/versions/: 2024_01_10_0221-0cbd3f4259e0_database_creation.py  2024_01_13_0255-46e99ff14a22_database_creation.py  2024_01_13_0301-78bf377b5207_change_user_table.py  2024_01_13_0815-52035c36b1e5_.py  2024_01_13_0828-c5864e5b3180_.py
microservice1/src/: config.py  main.py
microservice1/src/api/: router.py
microservice1/src/api/v1/: __init__.py
microservice1/src/api/v1/endpoints/: __init__.py  proposal.py  token.py  user.py  vote.py
microservice1/src/api/v1/schemas/: proposal.py  user.py  vote.py
microservice1/src/db/: __init__.py  base.py  models.py
microservice1/src/db/models/: __init__.py  models.py
microservice1/src/protobufs/: communication_pb2_grpc.py
microservice1/src/services/: proposal.py  token.py  user.py  vote.py
microservice2/: Dockerfile  pyproject.toml
microservice2/src/: api.py  config.py  main.py  schemas.py  services.py
microservice2/src/protobufs/: communication_pb2.py
protos/: communication.proto
