[tool.poetry]
name = "nat-intel-microservice-1"
version = "0.1.0"
description = ""
authors = ["mabredin <mbredin@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
uvicorn = "^0.25.0"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
httpx = "^0.26.0"
grpcio-tools = "^1.60.0"
setuptools = "<=65.6.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
